[package]
name = "cookie"
version = "0.16.0"
authors = ["Sergio Benitez <sb@sergio.bz>", "Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioBenitez/cookie-rs"
documentation = "https://docs.rs/cookie"
readme = "README.md"
build = "build.rs"
description = """
HTTP cookie parsing and cookie jar management. Supports signed and private
(encrypted, authenticated) jars.
"""

[features]
percent-encode = ["percent-encoding"]
secure = ["private", "signed", "key-expansion"]
private = ["aes-gcm", "base64", "rand", "subtle"]
signed = ["hmac", "sha2", "base64", "rand", "subtle"]
key-expansion = ["sha2", "hkdf"]

[dependencies]
# wasm support isn't released yet as of version v0.3.11. See: https://github.com/time-rs/time/pull/491
time = { git = "https://github.com/time-rs/time", rev = "7be38dc28c56eb5d4e1c250720803ecbaea4f283", default-features = false, features = ["std", "parsing", "formatting", "macros"] }
percent-encoding = { version = "2.0", optional = true }

# dependencies for secure (private/signed) functionality
aes-gcm = { version = "0.9.0", optional = true }
hmac = { version = "0.12.0", optional = true }
sha2 = { version = "0.10.0", optional = true }
base64 = { version = "0.13", optional = true }
rand = { version = "0.8", optional = true }
hkdf = { version = "0.12.0", optional = true }
subtle = { version = "2.3", optional = true }

[build-dependencies]
version_check = "0.9.4"

[package.metadata.docs.rs]
all-features = true
